--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "lucree/sdk-php-7",
+  "name": "brunopazz/lucree-SDK-PHP",
   "description": "SDK PHP LUCREE",
   "type": "library",
   "authors": [
